# enzo

./: .clang-format  .gitignore  .gitmodules  AttributeHandle_8h_source.html  Attribute_8h_source.html  BooleanUtils_8h_source.html  CMakeLists.txt  Camera_8h_source.html  ChangeConnectionCommand_8h_source.html  ChangeDisplayFlagCommand_8h_source.html  ChangeParameterCommand_8h_source.html  ChangeSelectionCommand_8h_source.html  ConnectionSerializable_8h_source.html  Connection_8h_source.html  Context_8h_source.html  CookContext_8h_source.html  CreateNodeCommand_8h_source.html  DasContext_8h_source.html  DasRuntime_8h_source.html  Default_8h_source.html  DeleteNodeCommand_8h_source.html  ExpressionContext_8h_source.html  ExpressionEngine_8h_source.html  GeometryConnection_8h_source.html  GeometryOpDef_8h_source.html  GeometryOperator_8h_source.html  Geometry_8h_source.html  IndexSet_8h_source.html  MeshShapes_8h_source.html  MeshUtils_8h_source.html  Mesh_8h_source.html  MoveNodeCommand_8h_source.html  NetworkGraph_8h_source.html  NetworkManager_8h_source.html  NetworkPath_8h_source.html  NetworkSerializable_8h_source.html  NodePacket_8h_source.html  NodeParameter_8h_source.html  OpInfo_8h_source.html  OperatorSerializable_8h_source.html  (+266 more)
flatpak/: build.sh  org.enzosoftware.Enzo.desktop  org.enzosoftware.Enzo.metainfo.xml  org.enzosoftware.Enzo.yml
manifest/: vcpkg.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+27 more)
src/Engine/: Types.h
src/Engine/Attribute/: Attribute.cpp  Attribute.h  AttributeHandle.h  Point.h  Transform.cpp  Transform.h
src/Engine/Core/: Path.cpp  Path.h  Types.h
src/Engine/Dependency/: DependencyGraph.cpp  DependencyGraph.h  Unit.h
src/Engine/Expression/: DasContext.h  DasRuntime.cpp  DasRuntime.h  ExpressionContext.h  ExpressionEngine.cpp  ExpressionEngine.h  ParameterFunctions.cpp
src/Engine/GeometryAlgorithms/: BooleanUtils.cpp  BooleanUtils.h  MeshShapes.cpp  MeshShapes.h  MeshUtils.cpp  MeshUtils.h
src/Engine/Network/: Context.cpp  Context.h  CookContext.cpp  CookContext.h  ExpressionContext.h  GeometryConnection.cpp  GeometryConnection.h  GeometryOpDef.cpp  GeometryOpDef.h  GeometryOperator.cpp  GeometryOperator.h  NetworkManager.cpp  NetworkManager.h  NetworkPath.cpp  NetworkPath.h  NodePacket.cpp  NodePacket.h  OpInfo.h  OperatorTable.cpp  OperatorTable.h  UpdateLock.cpp  UpdateLock.h
src/Engine/NetworkGraph/: Connection.h  NetworkGraph.cpp  NetworkGraph.h  Unit.h
src/Engine/Operator/: Attribute.cpp  Attribute.h  AttributeHandle.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Geometry.cpp  Geometry.h  GeometryConnection.cpp  GeometryConnection.h  GeometryOpDef.cpp  GeometryOpDef.h  GeometryOperator.cpp  GeometryOperator.h  IndexSet.cpp  IndexSet.h  Mesh.cpp  Mesh.h  NodePacket.cpp  NodePacket.h  OperatorTable.cpp  Path.cpp  Path.h  Point.h  PrimPath.cpp  PrimPath.h  Primitive.cpp  Primitive.h  Selection.cpp  Selection.h  SelectionComponent.cpp  SelectionComponent.h  Transform.h
src/Engine/Parameter/: Default.cpp  Default.h  NodeParameter.cpp  NodeParameter.h  Parameter.cpp  Parameter.h  ParmAddress.h  PrmName.cpp  PrmName.h  Ramp.cpp  Ramp.h  Range.cpp  Range.h  Style.h  Template.cpp  Template.h
src/Engine/Primitives/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h
src/Engine/Selection/: IndexSet.cpp  IndexSet.h  PrimPath.cpp  PrimPath.h  Selection.cpp  Selection.h  SelectionComponent.cpp  SelectionComponent.h
src/Engine/Serializer/: ConnectionSerializable.h  NetworkSerializable.h  OperatorSerializable.h  ParameterSerializable.h  Serializer.cpp  Serializer.h
src/Engine/UndoRedo/: ChangeConnectionCommand.h  ChangeDisplayFlagCommand.h  ChangeParameterCommand.h  ChangePrimaryNodeCommand.h  ChangeSelectionCommand.h  CreateNodeCommand.h  DeleteNodeCommand.h  MoveNodeCommand.h  UndoCommand.h  UndoCommands.h  UndoDisabler.h  UndoGroup.h  UndoStack.cpp  UndoStack.h
src/Engine/Util/: StringUtils.h  UnionFind.cpp  UnionFind.h
src/Engine/Utils/: BooleanUtils.cpp  BooleanUtils.h  MeshShapes.cpp  MeshShapes.h  MeshUtils.cpp  MeshUtils.h  StringUtils.h
src/Gui/: App.qml  IconRegistry.cpp  IconRegistry.h  Interface.cpp  Interface.h  Style.h  Utils.js  main.cpp
src/Gui/Components/: Icon.qml  Panel.qml  PlaceholderDialog.qml  PopupList.qml  Slider.qml
src/Gui/Controllers/: SceneController.cpp  SceneController.h
src/Gui/GeometrySpreadsheetPanel/: AttributeSpreadsheetModel.cpp  AttributeSpreadsheetModel.h  GeometrySpreadsheetMenuBar.cpp  GeometrySpreadsheetMenuBar.h  GeometrySpreadsheetModel.cpp  GeometrySpreadsheetModel.h  (+6 more)
src/LegacyGui/: IconRegistry.cpp  Interface.cpp  Interface.h  main.cpp
src/OpDefs/: CMakeLists.txt  GopBoolean.cpp  GopBoolean.h  GopCamera.cpp  GopCamera.h  GopCircle.cpp  GopCircle.h  GopCopyToPoints.cpp  GopCopyToPoints.h  GopCube.cpp  GopCube.h  GopDelete.cpp  GopDelete.h  GopExtrude.cpp  GopExtrude.h  GopGeometryImport.cpp  GopGeometryImport.h  GopGrid.cpp  GopGrid.h  GopHouse.cpp  GopHouse.h  GopMerge.cpp  GopMerge.h  GopOceanSurface.cpp  GopOceanSurface.h  GopPath.cpp  GopPath.h  GopSineWave.cpp  GopSineWave.h  GopSweep.cpp  GopSweep.h  GopTestCube.cpp  GopTestCube.h  GopTransform.cpp  GopTransform.hpp  RegisterPlugin.cpp
static/: resources.qrc
static/theme/: default.yml
tests/: Benchmarks.cpp  BooleanUtilsTests.cpp  DependencyGraphTests.cpp  ExpressionEngineTests.cpp  MeshTests.cpp  NetworkGraphTests.cpp  NetworkPathTests.cpp  NetworkTests.cpp  OperatorTests.cpp  ParameterTests.cpp  ParmAddressTests.cpp  PathTests.cpp  RampTests.cpp  SelectionTests.cpp  SerializerTests.cpp  UndoTests.cpp  main-tests.cpp
tests/gui/: ThemeLoaderTests.cpp
(+230 files in other folders)
